@@ -7,6 +7,9 @@ MComix 0.92 (4.0.5)
       For ZIP archives, Python >= 2.6 is required. For RAR archives,
       only extraction with libunrar/unrar.dll is supported.
 
+    - Added a combobox to the library dialog to enable sorting of books
+      based on file name, full path, or file size.
+
     - If a library collection has sub-collections, the books from these
       sub-collections will be shown as well when the collection is opened.
 
